Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -993,7 +993,8 @@
     }
    ],
    "source": [
-    "plot_pdfs(.2)\n",
+    "plot_pdfs(0\n",
+    "        )\n",
     "# Try changing the d value and observe the effect on the outcome below"
    ]
   },
